// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rmrk2.0.0 Consolidator: SETPROPERTY should allow if we are trying to mutate property with matching mutation condition 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
    "d43593c715a56da27d-KANARIAGEMS": Collection {
      "block": 3,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIAGEMS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIAGEMS",
    },
  },
  "invalid": [],
  "nfts": {
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": {
      "block": 4,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {
        "test": {
          "_mutation": {
            "allowed": true,
            "with": {
              "condition": "d43593c715a56da27d-KANARIAGEMS",
              "opType": "BURN",
            },
          },
          "type": "string",
          "value": "bar",
        },
      },
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
    "5-d43593c715a56da27d-KANARIAGEMS-KANGEM-00000111": {
      "block": 5,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIAGEMS",
      "forsale": 0n,
      "id": "5-d43593c715a56da27d-KANARIAGEMS-KANGEM-00000111",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000111",
      "symbol": "KANGEM",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: SETPROPERTY should allow to mutate property if owner _mutator match 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
    "d43593c715a56da27d-KANARIAGEMS": Collection {
      "block": 3,
      "changes": [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIAGEMS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIAGEMS",
    },
  },
  "invalid": [],
  "nfts": {
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 4,
      "burned": "",
      "changes": [
        {
          "block": 5,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "owner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "SEND",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": [],
      "properties": {
        "test": {
          "_mutation": {
            "allowed": true,
          },
          "type": "string",
          "value": "bar",
        },
      },
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: SETPROPERTY should not allow to mutate royalty to an invalid value 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
    "d43593c715a56da27d-KANARIAGEMS": Collection {
      "block": 3,
      "changes": [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIAGEMS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIAGEMS",
    },
  },
  "invalid": [],
  "nfts": {
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 4,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {
        "royaltyInfo": {
          "_mutation": {
            "allowed": true,
          },
          "type": "royalty",
          "value": {
            "receiver": "xxx",
            "royaltyPercentFloat": 101,
          },
        },
        "test": {
          "type": "string",
          "value": "foo",
        },
      },
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: SETPROPERTY should throw if we are trying to mutate property with no matching extra call condition 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
    "d43593c715a56da27d-KANARIAGEMS": Collection {
      "block": 3,
      "changes": [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIAGEMS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIAGEMS",
    },
  },
  "invalid": [
    {
      "block": 6,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[SETPROPERTY] Attempting to mutate an property but it's mutation condition doesn't match",
      "object_id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "op_type": "SETPROPERTY",
    },
  ],
  "nfts": {
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": {
      "block": 4,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {
        "test": {
          "_mutation": {
            "allowed": true,
            "with": {
              "condition": "d43593c715a56da27d-KANARIAGEMS",
              "opType": "BURN",
            },
          },
          "type": "string",
          "value": "foo",
        },
      },
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
    "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 5,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {
        "test": {
          "_mutation": {
            "allowed": true,
          },
          "type": "string",
          "value": "foo",
        },
      },
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;
